--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>Git & GitHub Crash Course</title>
     </head>
     <body>
-        <h1>Because the basics are important!</h1>
+        <h1>Git & GitHub Crash Course</h1>
+        <p>Because the basics are important!</p>
+        <p>Learn more about Git on 
+            <a href="https://git-scm/book/en/v2">the official website</a>
+        </p>
     </body>
 </html>
