--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <header>
         <meta charset="UTF8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viweport" content="width=device-width, initial-scale" />
         <title>Git & GitHub Crash Course</title>
-    </head>
+    </header>
     <body>
-        <h1>Git & GitHub Crash Course</h1>
-        <p>Because the basics are important!</p>
-        <p>Learn more about Git on 
-            <a href="https://git-scm/book/en/v2">the official website</a>
-        </p>
+        <main>
+            <section>
+                <h1>Git & GitHub Crash Course</h1>
+                <p>Because the basics are important!</p>
+                <p>Learn more about Git on 
+                <a href="https://git-scm/book/en/v2">the official website</a>
+            </p>
+            </section>
+        </main>
     </body>
 </html>
